syntax = "proto3";
package arango;

import "google/protobuf/struct.proto";
import "google/protobuf/empty.proto";

service ArangoService {
  rpc StreamQuery(QueryRequest) returns (stream Document);
  rpc CreateDocument(Document) returns (CRUDResponse);
  rpc ReadDocument(ReadRequest) returns (Document);
  rpc UpdateDocument(Document) returns (CRUDResponse);
  rpc DeleteDocument(ReadRequest) returns (CRUDResponse);
  rpc BatchInsert(stream Document) returns (CRUDResponse);
  rpc AddFollow(FollowRequest) returns (CRUDResponse);
  rpc GetFriends(FriendsRequest) returns (FriendsResponse);
}

message QueryRequest {
  string aql = 1;
  map<string, google.protobuf.Value> bindVars = 2;
}

// Универсальное сообщение для передачи документа.
message Document {
  // Поля сущности (id, first_name, etc.) передаются в Struct.
  google.protobuf.Struct fields = 1;
}

message ReadRequest {
  string collection = 1;
  string key = 2;
}

message CRUDResponse {
  bool success = 1;
  string key = 2;
  Error error = 3;
}

message Error {
  int32 code = 1;
  string message = 2;
}

message FollowRequest {
  string fromKey = 1;
  string toKey = 2;
}

message FriendsRequest {
  string key = 1;
}

message FriendsResponse {
  repeated google.protobuf.Struct friends = 1;
}
